# nifi-ai-talk

./: .gitignore  README.md  compose.yaml
flow_defs/: ChicagoSalary.json  DetectTable.json  InitElastic.json  NiFiJava.json  TestTable.json
hugging-face-ocr/: HuggingFaceOcrController.py  requirements.txt
microsoft-large-handwriting/: MicrosoftLargeHandWrittingController.py  requirements.txt
nifi-server/: Dockerfile
table-cli/: README.md  coco.py  detect_coco.py  detect_image.py  plot_utils.py  requirements.txt
table-detection-processor/: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
table-detection-processor/src/table_detection_processor/: TableDetectionProcessor.py  __about__.py  coco.py  requirements.txt
table-detection-processor/tests/: __init__.py
